# python-soundlevelmeter

./: .gitignore  LICENSE  NOTICE  README.md  pyproject.toml  requirements.txt  todo.md
.github/workflows/: pypi-publish.yml
data/slm-test-01/: 2026-02-06.md  2026-02-06_SLM_000.XL2  2026-02-06_SLM_000_123_Log.txt  2026-02-06_SLM_000_123_Report.txt  2026-02-06_SLM_000_RTA_3rd_Log.txt  2026-02-06_SLM_000_RTA_3rd_Report.txt  2026-02-06_SLM_001.XL2  2026-02-06_SLM_001_123_Log.txt  2026-02-06_SLM_001_123_Report.txt  2026-02-06_SLM_001_RTA_3rd_Log.txt  2026-02-06_SLM_001_RTA_3rd_Report.txt  2026-02-06_SLM_002.XL2  2026-02-06_SLM_002_123_Log.txt  2026-02-06_SLM_002_123_Report.txt  2026-02-06_SLM_002_RTA_3rd_Log.txt  2026-02-06_SLM_002_RTA_3rd_Report.txt  2026-02-06_SLM_003.XL2  2026-02-06_SLM_003_123_Log.txt  2026-02-06_SLM_003_123_Report.txt  2026-02-06_SLM_003_RTA_3rd_Log.txt  2026-02-06_SLM_003_RTA_3rd_Report.txt  2026-02-06_SLM_004.XL2  2026-02-06_SLM_004_123_Log.txt  2026-02-06_SLM_004_123_Report.txt  2026-02-06_SLM_004_RTA_3rd_Log.txt  2026-02-06_SLM_004_RTA_3rd_Report.txt
notes/: SLM_Conformance_Test_Report.md
scripts/: main.py  profile_engine.py
slm/: __main__.py  assembly.py  bus.py  calibration.py  cli.py  config.py  controller.py  display.py  engine.py  file_controller.py  frequency_weighting.py  meter.py  octave_band.py  plugin.py  plugin_meter.py  processing_element.py  reporter.py  time_weighting.py
slm/app/: __init__.py  __main__.py  cli.py
slm/io/: __init__.py  realtime_controller.py  sounddevice_controller.py
slm/plugins/: fifo.py  frequency_weighting.py  plugin.py  time_averaging.py  time_weighting.py
src/slm/: __main__.py  bus.py  constants.py  engine.py  exceptions.py  fifo.py  frequency_weighting.py  meter.py  plugin_meter.py
src/slm/app/: cli.py  config.py
src/slm/io/: controller.py  display.py
src/soundlevelmeter/: __init__.py  __main__.py  assembly.py  bus.py  calibration.py  engine.py  frequency_weighting.py  meter.py  octave_band.py  plugin.py  plugin_meter.py  time_weighting.py
src/soundlevelmeter/app/: __init__.py  (+2 more)
tests/: conftest.py  main.py  test_assembly.py  test_cli.py  test_meter.py  test_reporter.py  test_xl2_broadband.py  test_xl2_rta.py  xl2.py
tests/iec61260/: test_61260_1_filters.py
tests/iec61672/: test_61672_cpeak.py  test_61672_frequency_weightings.py  test_61672_laeq_sel.py  test_61672_level_linearity.py  test_61672_stability.py  test_61672_time_weightings.py  test_61672_toneburst.py
tests/unit/: test_assembly.py  test_calibration.py  test_cli.py  test_fifo.py  test_impulse_time_weighting.py  test_meter.py  test_reporter.py  test_sounddevice_controller.py  test_time_weighting.py
tests/xl2/: test_xl2_broadband.py  test_xl2_rta.py
(+6 files in other folders)
