[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "open-spl"
version = "0.1.0"
description = "IEC 61672-1 Sound Level Meter"
requires-python = ">=3.12"
license = { file = "LICENSE" }
dependencies = [
    "numpy",
    "scipy",
    "soundfile",
    "sounddevice",
    "pyoctaveband",
]

[project.scripts]
slm = "slm.app.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["slm*", "util*"]